Add problem solving to TOC

--- a/unit1/ProblemSolving.html
+++ b/unit1/ProblemSolving.html
@@ -16,19 +16,6 @@ background-color: #cacaca
 
 ---
 
-## Socrative
-
-Visit `socrative.com` and enter room CODECAMP
-
-### Instructor Question
-
-Do you learn better via self-reading or lecture?
-- Lecture
-- Self-reading
-- Neither/both: I learn well with each, but for different reasonse
-
----
-
 class: center, middle
 
 # Problem Solving
@@ -43,20 +30,17 @@ A farmer is on his way to market with a fox, a chicken, and a bag of corn. He mu
 
 1. If the farmer takes the fox first, the chicken will eat the corn.
 1. If the farmer takes the corn first, the fox will eat the chicken.
-1. If the farmer takes the chicken first, the fox _will not_ eat the corn. However, he'll then have to take either the fox or corn on the next trip, and when left alone to return for the final item one of the first two situations will occur.
+
+How can the farmer get all three across unharmed?
 
 ---
 
-## Problem Solving: An Analogy
+## What steps did you take?
 
-Think for a few seconds about problem-solving. If you were to make an analogy, what would it be?
-
----
-
-## Problem Solving: An Analogy
-
-Your ideas:
--
+- Paid attention to implicit information
+- Writing things down
+- Asked questions
+- Thinking through different possibilities
 
 ---
 
@@ -189,7 +173,7 @@ Say the problem again in your own words to:
 
 - Try to subdivide the problem
 
-??
+???
 
 **Write down what you know.** Given the problem statement, what facts do you have at-hand? Are there any basic inferences that you can make from the given facts?
 
