--- a/unit4/js-part2.html
+++ b/unit4/js-part2.html
@@ -65,7 +65,7 @@ With either method, we may place the `&lt;script&gt;` element anywhere in the `&
 1. When the page loads, the browser will scan the HTML document from top to bottom
 --
 
-2. As it finds JS, it either parses it parses it, loading external files as necessary
+2. As it finds JS, it parses the code, loading external files as necessary
 --
 
 3. Any JS code not contained in a function will be executed immediately
